test/classes/initializers/compilerGenerated/pragmaOnly/inherits_default3.good
inherits_default3.chpl:12: In function 'main':
inherits_default3.chpl:13: error: could not generate default initializer for type 'Child', please define one
